Fix navbar and alerts spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,7 @@ a:active.tag { color: white; text-decoration: none; }
 }
 
 .header-alert {
-	margin-top: 30px;
+	margin-top: 35px;
 }
 
 #left-dropdown {
